# porchbench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  DESIGN-ROUTING.md  DESIGN-SANDBOX.md  DESIGN.md  LICENSE  METHODOLOGY.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/evaluate/: SKILL.md
.claude/skills/evaluate-paired/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/assets/: regen_compare_svgs.py  social-card.html
docs/design/: llm_benchmark_results.md
docs/design/ideas/: IDEA-cross-domain-suite.md
docs/design/prelim/: PRELIM-kv-cache-compression.md  PRELIM-model-library.md
docs/reference/: METHODOLOGY.md
docs/skills/: evaluate-paired.md  evaluate.md
examples/: README.md  routing-analysis_tool-use_ministral-vs-granite.json  run-result_coding-basics_gemma4-e4b.json  run-result_coding-basics_granite4.1-8b.json  run-result_coding-basics_ministral-3-8b.json  run-result_coding-basics_qwen2.5-3b.json  run-result_tool-use-discovery_granite4.1-8b.json  run-result_tool-use-discovery_ministral-3-8b.json  scorecard_coding-basics_granite4.1-8b.json  scorecard_coding-basics_ministral-3-8b.json  system-profile.json
rubrics/: calibration-examples.yaml  cross-domain.yaml
scripts/: run-tier1.ps1
src/feral/: __init__.py  __main__.py  assets.py  backend.py  cli.py  client.py  compare.py  errors.py  evaluator.py  interactive.py  leaderboard.py  metrics.py  overnight.py  profiler.py  routing.py  runner.py  schemas.py  statistics.py  suite.py  tool_runner.py
src/feral/data/rubrics/: coding.yaml  cross-domain-science.yaml
src/feral/data/suites/: tool-use.yaml
src/feral/data/suites/fixtures/: employees.csv
src/feral/harness/: __init__.py  harness.py
src/feral/sandbox/: __init__.py  base.py  subprocess_backend.py  validator_dispatch.py  validators.py
src/ollama_bench/: __init__.py  cli.py  client.py  compare.py  evaluator.py  metrics.py  profiler.py  routing.py  runner.py  schemas.py  suite.py  tool_runner.py
src/ollama_bench/harness/: __init__.py  harness.py
src/ollama_bench/sandbox/: __init__.py  subprocess_backend.py  validator_dispatch.py  validators.py
src/porchbench/: __init__.py  __main__.py  _console.py  assets.py  backend.py  cli.py  compare.py  display.py  doctor.py  errors.py  evaluator.py  interactive.py  leaderboard.py  metrics.py  overnight.py  profiler.py  reliability.py  routing.py  runner.py  schemas.py  statistics.py  suite.py  tool_runner.py
src/porchbench/data/rubrics/: default.yaml  reasoning.yaml
src/porchbench/data/suites/: coding-basics.yaml  cross-domain.yaml  routing-discovery.yaml  tool-use.yaml
src/porchbench/data/suites/fixtures/: config-broken.json  sales-data.json
src/porchbench/harness/: __init__.py  harness.py
src/porchbench/sandbox/: __init__.py  subprocess_backend.py  validator_dispatch.py  validators.py
suites/: coding-basics.yaml  cross-domain.yaml  routing-discovery.yaml  tool-use.yaml
suites/fixtures/: buggy-script.py  messy-data.csv  prices-simple.csv  prices-trivial.csv
tests/: test_assets.py  test_backend.py  test_cli_helpers.py  test_compare.py  test_doctor.py  test_errors.py  test_evaluate_cli.py  test_evaluator.py  test_examples_roundtrip.py  test_harness.py  test_interactive.py  test_leaderboard.py  test_metrics.py  test_overnight.py  test_picker_reorder.py  test_profiler.py  test_reliability.py  test_routing.py  test_run_cli.py  test_runner.py  test_sandbox.py  test_schemas.py  test_statistics.py  test_suite.py  test_validator_dispatch.py  test_validators.py
