[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feral"
version = "0.1.0"
description = "Deterministic benchmarking of local LLMs via Ollama"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beaupy>=3.5",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
feral = "feral.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/feral"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
