[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feral"
version = "0.1.0"
description = "Rigorous quality benchmarking for local LLMs with paired statistics, LLM-as-judge scoring, and reproducible runs."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Michael Miller", email = "mmdevelops@gmail.com" },
]
keywords = [
    "llm",
    "benchmark",
    "ollama",
    "evaluation",
    "local-ai",
    "quantization",
    "routing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beaupy>=3.5",
]

[project.urls]
Homepage = "https://github.com/mmdevelops/feral"
Repository = "https://github.com/mmdevelops/feral"
Issues = "https://github.com/mmdevelops/feral/issues"
Changelog = "https://github.com/mmdevelops/feral/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
feral = "feral.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/feral"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
