[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porchbench"
dynamic = ["version"]
description = "Rigorous quality benchmarking for local LLMs with paired statistics, LLM-as-judge scoring, and reproducible runs."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Michael Miller", email = "mmdevelops@gmail.com" },
]
keywords = [
    "llm",
    "benchmark",
    "ollama",
    "evaluation",
    "local-ai",
    "quantization",
    "routing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beaupy>=3.5",
]

[project.urls]
Homepage = "https://github.com/mmdevelops/porchbench"
Repository = "https://github.com/mmdevelops/porchbench"
Issues = "https://github.com/mmdevelops/porchbench/issues"
Changelog = "https://github.com/mmdevelops/porchbench/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
porchbench = "porchbench.cli:main"

[tool.hatch.version]
path = "src/porchbench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/porchbench"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# cli.py calls load_dotenv() before `import typer` so Typer sees .env-provided
# envvar defaults (E402 waiver). Typer option definitions with help= strings
# also blow past the line limit intentionally — keeping each option on one line
# is easier to read than mechanical wraps (E501 waiver).
"src/porchbench/cli.py" = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
